# WTM-DubHacks

./: README.md  payloads.json
backend/: app.py  db.py  pyproject.toml  util.py  wtm.py
backend/routes/: createUser.py  events.py  feed.py  friends.py  login.py  users.py
backend/wtm/: app.py  db.py  util.py  wtm.py
backend/wtm/routes/: events.py  feed.py  friends.py  healthz.py  login.py  posts.py  upload_files.py  users.py
frontend/: package-lock.json
frontend/wtm/: package-lock.json  package.json
frontend/wtm/src/: App.js  ChooseInterest.css  CreateEvent.css  Feed.css  Login.css  SignUp.css  endpoints.js  index.js
frontend/wtm/src/Routes/: ChooseInterest.jsx  CreateEvent.jsx  CreatePost.jsx  Event.jsx  Feed.jsx  Login.jsx  SignUp.jsx
