[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Isaac Yun, Oleg Ianchenko, Carl Searle, Madelyn Le"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.10.1"
Flask = "^3.0.3"
gevent = "^24.10.2"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
